<resources>
    <string name="app_name">Calorie Calulator for Runner</string>
    <string name="name">Name:</string>
    <string name="name_hint">Enter your name</string>
    <string name="weight">Weight (kg):</string>
    <string name="weight_hint">Enter your weight</string>
    <string name="height">Height(cm):</string>
    <string name="height_hint">Enter your height(cm)</string>
    <string name="expect_speed">Expected speed (m/s):</string>
    <string name="speed_unit">m/s</string>
    <string name="run">Run!</string>
    <string name="dummy">Dummy</string>
    <string name="gongxi">Good Job!!!</string>
    <string name="finish">You finished your plan!</string>
    <string name="runn">You ran</string>
    <string name="use">And used </string>
    <string name="expect">Expect Time:</string>
    <string name="currentd">Current Distance:</string>
    <string name="cb">Calories Burned:</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="distanceremaining">Distance Remaining:</string>
</resources>
