<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.msu.pengyunf.calorie_calulator_for_runner.MainActivity">

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/textWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="70dp" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/weight_hint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/textCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="121dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="163dp" />

    <TextView
        android:id="@+id/textCalUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal_unit"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="452dp"
        tools:layout_editor_absoluteY="175dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expect_speed"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="233dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="281dp" />

    <TextView
        android:id="@+id/textSpeedUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_unit"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="451dp"
        tools:layout_editor_absoluteY="294dp" />

    <Button
        android:id="@+id/buttonRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="455dp" />
</android.support.constraint.ConstraintLayout>
